src/styles/mobile.scss
html.mobile-view {
  #saypi-panel,
  .notification {
    width: 100%;
    position: fixed;
    left: 0;
    background-color: rgba(245, 238, 223, 0.98);

    height: 100vh;
    top: 0;
  }

  #saypi-talkButton {
    width: 100%;
    height: 100%;
    background-color: transparent;
    border-radius: 0;
    margin: 0;
  }

  #saypi-notification {
    z-index: 100;
    background-color: transparent;
    svg {
      width: 75%;
      height: 100%;
      margin: auto;
    }
  }

  /* Pi controls: ellipsis, experiences */
  #__next > main > div > div > div.fixed.top-4.right-6 > button,
  #saypi-experiences-button {
    transform: scale(1.5);
  }

  /* Pi controls: mute/unmute */
  #saypi-audio-controls {
    /* hide the voice options */
    div.p-1 {
      display: none;
    }
    /* scale the mute button */
    button.group {
      transform: scale(2) !important;
      z-index: 50;
      /* hide the voice selector twisty */
      + button {
        display: none;
      }
    }
  }

  /* fix an alignment issue with the "new ui layout" */
  .text-body-chat-m {
    padding-top: 0;
  }

  #saypi-enterButton {
    display: none;
  }

  #saypi-footer {
    display: none;
  }

  #saypi-prompt-ancestor {
    /* hides the row containing the text area control */
    /* important: hides virtual keyboard on android */
    display: none;
    /* the call button, usually nested in the prompt, is detached while in mobile view */
  }

  #saypi-submitButton {
    display: none;
  }

  #saypi-callButton {
    position: fixed;
    bottom: 4rem;
    left: 0;
    right: 0;
    margin: auto;
    width: 4.5rem;
    height: 4.5rem;
    padding: 6px;
    border: 0;
    z-index: 80;
  }
}

